refactor: implement simplified provider architecture